yaml_test/deployment_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-index
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: index
      role: f
  template:
    metadata:
      labels:
        app: nginx
        name: index
        role: f
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - index
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - f
              topologyKey: topology.kubernetes.io/zone
#      topologySpreadConstraints:
#        - maxSkew: 1
#          topologyKey: kubernetes.io/hostname
#          whenUnsatisfiable: ScheduleAnyway
#          labelSelector:
#            matchLabels:
#              app: nginx-index-deploy
      containers:
        - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-menu:v1.0
          name: nginx-index-deploy
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /index.jsp
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 3



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-menu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: menu
      role: g
  template:
    metadata:
      labels:
        app: nginx
        name: menu
        role: g
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - menu
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - g
              topologyKey: topology.kubernetes.io/zone
#      topologySpreadConstraints:
#        - maxSkew: 1
#          topologyKey: kubernetes.io/hostname
#          whenUnsatisfiable: ScheduleAnyway
#          labelSelector:
#            matchLabels:
#              app: nginx-menu-deploy
      containers:
        - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-menu:v1.0
          name: nginx-menu-deploy
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /menu.jsp
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-login
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: login
      role: h
  template:
    metadata:
      labels:
        app: nginx
        name: login
        role: h
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - login
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - h
              topologyKey: topology.kubernetes.io/zone
#      topologySpreadConstraints:
#        - maxSkew: 1
#          topologyKey: kubernetes.io/hostname
#          whenUnsatisfiable: ScheduleAnyway
#          labelSelector:
#            matchLabels:
#              app: nginx-login-deploy
      containers:
        - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-login:v1.0
          name: nginx-login-deploy
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /login.jsp
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-join
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: join
      role: i
  template:
    metadata:
      labels:
        app: nginx
        name: join
        role: i
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - join
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - i
              topologyKey: topology.kubernetes.io/zone
 #     topologySpreadConstraints:
 #       - maxSkew: 1
 #         topologyKey: kubernetes.io/hostname
 #         whenUnsatisfiable: ScheduleAnyway
 #         labelSelector:
 #           matchLabels:
 #             app: nginx-join-deploy
      containers:
        - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-join:v1.0
          name: nginx-join-deploy
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /join.jsp
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-mypage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      name: mypage
      role: j
  template:
    metadata:
      labels:
        app: nginx
        name: mypage
        role: j
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - mypage
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - j
              topologyKey: topology.kubernetes.io/zone
  #   topologySpreadConstraints:
  #     - maxSkew: 1
  #       topologyKey: kubernetes.io/hostname
  #       whenUnsatisfiable: ScheduleAnyway
  #       labelSelector:
  #         matchLabels:
  #           app: nginx-mypage-deploy
      containers:
        - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/nginx-mypage:v1.0
          name: nginx-mypage-deploy
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /mypage.jsp
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 60
            successThreshold: 1
            failureThreshold: 3
