yaml_test/deployment_tomcat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-index
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: index
      role: a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: tomcat
        name: index
        role: a
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - index
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - a
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 992382441622.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-index:v1.0
        name: tomcat-index-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: tomcat-efs
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 300m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: tomcat-efs
          persistentVolumeClaim:
            claimName: efs-claim

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-menu
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: menu
      role: b
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: tomcat
        name: menu
        role: b
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - menu
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - b
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 992382441622.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-menu:v1.0
        name: tomcat-menu-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: tomcat-efs
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 300m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /menu.jsp
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: tomcat-efs
          persistentVolumeClaim:
            claimName: efs-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-login
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: login
      role: c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: login
        role: c
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - login
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - c
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 992382441622.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-login:v1.0
        name: tomcat-login-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: tomcat-efs
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /login.jsp
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: tomcat-efs
          persistentVolumeClaim:
            claimName: efs-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-join
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: join
      role: d
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: join
        role: d
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - join
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - d
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 992382441622.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-join:v1.0
        name: tomcat-join-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: tomcat-efs
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
          requests:
            cpu: 200m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /join.jsp
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: tomcat-efs
          persistentVolumeClaim:
            claimName: efs-claim


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-mypage
  annotations:
    kubernetes.io/change-cause: first_version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
      name: mypage
      role: e
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: tomcat
        name: mypage
        role: e
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - mypage
              topologyKey: kubernetes.io/hostname
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
                  - key: role
                    operator: In
                    values:
                      - e
              topologyKey: topology.kubernetes.io/zone
      containers:
      - image: 992382441622.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-mypage:v1.0
        name: tomcat-mypage-deploy
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/opt/tomcat/webapps/ROOT/data"
          name: tomcat-efs
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 300m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /mypage.jsp
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: tomcat-efs
          persistentVolumeClaim:
            claimName: efs-claim
